pybal (1.13.4) UNRELEASED; urgency=medium

  * Allow to specify configuration file name on the CLI (-c).

 -- Emanuele Rocca <ema@wikimedia.org>  Thu, 26 Jan 2017 09:48:27 +0100

pybal (1.13.3) jessie-wikimedia; urgency=medium

  * Allow the etcd driver to handle deleted/inactive nodes, more robustness

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Fri, 05 Feb 2016 09:35:01 +0100

pybal (1.13.2) jessie-wikimedia; urgency=medium

  * Fix a race condition in the alerting
  * Add config options for IdleConnectionMonitor KeepAlive

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Mon, 07 Dec 2015 17:06:44 +0100

pybal (1.13.1) jessie-wikimedia; urgency=medium

  * Fix alerting typo

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Wed, 18 Nov 2015 17:00:22 +0100

pybal (1.13) jessie-wikimedia; urgency=medium

  * Reverted ansyncronous execution of ipvsadm, as it caused race conditions to happen

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Wed, 18 Nov 2015 15:49:48 +0100

pybal (1.12.1) jessie-wikimedia; urgency=medium

  * Fix instrumentation config

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Mon, 16 Nov 2015 15:28:14 +0100

pybal (1.12) jessie-wikimedia; urgency=medium

  * IdleConnection: set tcp keepalive
  * Add EtcdConfigurationObserver to consume configuration dynamically from etcd
  * Convert logging from print to twisted.python.log

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Fri, 30 Oct 2015 11:44:14 +0100

pybal (1.11.1) jessie-wikimedia; urgency=medium

  * Fix a typo in Proxyfetch, systemd unit file

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Tue, 06 Oct 2015 14:16:17 +0200

pybal (1.11) jessie-wikimedia; urgency=medium

  * Systemd support, removal of unneeded code (daemonization, file logging)
  * Added instrumentation HTTP server
  * ProxyFetch now supports specifying the http_status

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Sat, 03 Oct 2015 11:09:42 +0200

pybal (1.10) jessie-wikimedia; urgency=medium
