@@ -1,6 +1,7 @@
 pybal (1.13.4) UNRELEASED; urgency=medium
 
-  * Allow to specify configuration file name on the CLI (-c).
+  * Allow to specify configuration file name on the CLI (-c)
+  * Log a warning on empty responses from etcd
 
  -- Emanuele Rocca <ema@wikimedia.org>  Thu, 26 Jan 2017 09:48:27 +0100
 
